--- a/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
+++ b/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
@@ -71,7 +71,14 @@
         <form  class="container-fluid" action="HeadVoucher">
             <div class="form-group">
                 <label class="control-label col-md-3" for="cliente">Cliente:</label>
-                @Html.EditorFor(model => model.clientModel.First().NombreCompleto, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="row">
+                    <div class="col-md-4">
+                        @Html.EditorFor(model => model.clientModel.First().NombreCompleto, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                    <div class="col-md-4">
+                        <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Cliente")'">Agregar Cliente</button>
+                    </div>
+                    </div>
                 <br />
                 <label class="label label-primary col-md-5" id="idTelefono"></label><div class="col-md-1"></div><label class="label label-primary col-md-5" id="idDireccion"></label>
                 <br />
