--- a/ERPAnimalia/Views/Product/Edit.cshtml
+++ b/ERPAnimalia/Views/Product/Edit.cshtml
@@ -8,6 +8,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Lista de Producto</title>
 
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('#PrecioVenta').blur(function () {
+                debugger;
+                var precioVenta= $('#PrecioVenta').val();
+                var precioCosto= $('#PrecioCosto').val();
+                var rentPesos = (precioVenta - precioCosto);
+                var rentPorc = (1 - (precioCosto / precioVenta)) * 100;
+
+                $('#RentabilidadPesos').val(rentPesos.toFixed(2));
+                $('#Rentabilidad').val(rentPorc.toFixed(2));
+
+            });
+        })
+            function HideSubcategory()
+            {
+                debugger;
+                var idCategory = $('#IdCategory').val();
+                if(idCategory== 2)
+                {
+                    $('#IdSubCategory').val(1);
+                    $('#IdSubCategory').attr('disabled', 'disabled');
+                    $('#kg').hide();
+                    $('#kgLabel').hide();
+                }
+                else
+                {
+                    $('#IdSubCategory').val(0);
+                    $('#IdSubCategory').removeAttr('disabled');
+                    $('#kg').show();
+                    $('#kgLabel').show();
+                }
+            }
+
+
+    </script>
+
 </head>
 <body>
 
@@ -22,7 +60,7 @@
         <div class="form-group">
             <label class="col-md-4" for="desc">Categoria:</label>
             @Html.DropDownListFor(model => Model.CategoryItem.IdCategory,
-                        new SelectList(Model.Category, "IdCategory", "Name"), new { @class = "form-control", type = "text", placeholder = "Seleccione Categoria" })
+                        new SelectList(Model.Category, "IdCategory", "Name"), new { @class = "form-control", type = "text", placeholder = "Seleccione Categoria", onchange = "HideSubcategory()" })
 
         </div>
         <div class="form-group">
@@ -77,7 +115,15 @@
                             <label class="col-md-4" for="pwd">Precio Venta</label>
                             @Html.TextBoxFor(m => m.PrecioVenta, new { @class = "form-control", type = "number", min = "0", step = "0.01", placeholder = "Precio Venta" })
                         </div>
-                    
+                        <div class="form-group">
+                            <label class="col-md-4" for="rentabilidad$">Rentabilidad $</label>
+                            @Html.TextBoxFor(m => m.RentabilidadPesos, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
+                        </div>
+                            <div class="form-group">
+                                <label class="col-md-4" for="rentabilidad%">Rentabilidad %</label>
+                                @Html.TextBoxFor(m => m.Rentabilidad, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
+                            </div>
+
 
 
                         <button type="submit" class="btn btn-primary">Guardar Producto</button>
