--- a/ERPAnimalia/Views/ListProduct/Index.cshtml
+++ b/ERPAnimalia/Views/ListProduct/Index.cshtml
@@ -86,18 +86,19 @@
 
     <div class="panel panel-primary">
         <div class="panel-heading">Producto</div>
-        <br class="panel-body">
-        <div class="form-group row">
-            <div class="col-md-3 col-md-offset-1">
-                <div class="input-group">
-                    <input type="text" id="search" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                        <button type="button" id="btnSearch" class="btn btn-default">Go!</button>
-                    </span>
+        <div class="panel-body">
+            <div class="form-group row">
+                <div class="col-md-3 col-md-offset-1">
+                    <div class="input-group">
+                        <input type="text" id="search" class="form-control" placeholder="Search for...">
+                        <span class="input-group-btn">
+                            <button type="button" id="btnSearch" class="btn btn-default">Go!</button>
+                        </span>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2">
-                <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Product")'">Agregar Producto</button>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Product")'">Agregar Producto</button>
+                </div>
             </div>
         </div>
         <br />
