--- a/ERPAnimalia/Views/LoadOrder/DetailLoadOrder.cshtml
+++ b/ERPAnimalia/Views/LoadOrder/DetailLoadOrder.cshtml
@@ -101,8 +101,8 @@
 </head>
 <body>
    
-        <div class="panel-heading">Producto</div>
-        <br class="panel-body">
+   <div class="panel-heading">Producto</div>
+    <div class="panel-body">
         <div class="form-group row">
             <div class="col-md-3 col-md-offset-1">
                 <div class="input-group">
@@ -110,14 +110,15 @@
                     <span class="input-group-btn">
                         <button type="button" id="btnSearchGridProduct" class="btn btn-default">Go!</button>
                     </span>
-                   
+
                 </div>
                 <br />
                 <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Product")'">Agregar Producto</button>
                 <button type="button" class="btn btn-primary" id="btnSave">Guardar</button>
             </div>
-           
+
         </div>
+    </div>
         <br />
         <table id="gridProduct" data-source="@Url.Action("GetProduct")"></table>
    
