--- a/ERPAnimalia/Views/Shared/_Layout.cshtml
+++ b/ERPAnimalia/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                 <a class="navbar-brand" href="#">WebSiteName</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ventas <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -56,7 +56,7 @@
                 <li>
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Compras <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Proveedor</a></li>
+                        <li>@Html.ActionLink("Proveedor", "Index", "Provider")</li>
                         <li>@Html.ActionLink("Nota de Pedido", "Index", "LoadOrder")</li>
                         <li><a href="#">Articulo</a></li>
                         <li><a href="#">Factura</a></li>
